--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ a{
 .navBar {
     background-color: #3f8d74;
     overflow: hidden;
-    position: sticky;
+    position: fixed;
+    top: 0;
+    width: 100%;
     padding-left: 5%;
 }
 .navBar a {
